@@ -37,12 +37,20 @@ public class H2DatabaseResults implements DatabaseResults {
 		return resultSet.next();
 	}
 
+	public boolean last() throws SQLException {
+		return resultSet.last();
+	}
+
 	public boolean previous() throws SQLException {
 		return resultSet.previous();
 	}
 
 	public boolean moveRelative(int num) throws SQLException {
 		return resultSet.relative(num);
+	}
+
+	public boolean moveAbsolute(int position) throws SQLException {
+		return resultSet.absolute(position);
 	}
 
 	public int findColumn(String columnName) throws SQLException {
